[tool.poetry]
name = "atividade-final-bd1"
version = "0.1.0"
description = "CRUD de tabelas presentes no banco de dados clínica, atividade final da disciplina de banco de dados I."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev main.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
